# fastapi-mailchimp-audiences

./: .env.example  Dockerfile  database.db  docker-compose.yml  pyproject.toml
app/: config.py  db.py  mailchimp.py  main.py  models.py
