[tool.poetry]
name = "fastapi-mailchimp-audiences"
version = "0.1.0"
description = ""
authors = ["Jalen Kenny <jtkenny21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
mailchimp-marketing = "^3.0.80"
psycopg = "^3.1.19"
pydantic-settings = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
